--- a/package.json
+++ b/package.json
@@ -2,22 +2,19 @@
   "name": "time-force",
   "version": "1.0.0",
   "description": "Time Force's Project 3",
-  "main": "index.js",
+  "main": "server/server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server --ignore client",
+    "develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "express": "^4.18.3",
-    "graphql": "^16.8.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.2.1"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "concurrently": "^5.1.0"
   }
 }
