--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@apollo/server": "^4.7.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2"
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^7.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
