--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "watch": "nodemon",
     "seed": "node seeders/seed.js",
-    "build": "vite build"
+    "build": "vite build",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
